fetch level 60+ characters from both Classic branches
